# RWKV_Role_Playing_API

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
chars/: 小雪.json
chars/sbin/: 小雪.json
modules/: common.py  login.py  methods.py  mirostat.py  model_utils.py  role_info.py
ui/: start_ui.bat
