[tool.poetry]
name = "rwkv-role-playing-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rwkv_role_playing_api"}]

[tool.poetry.dependencies]
python = "^3.9"
tokenizers = "^0.13.3"
prompt-toolkit = "^3.0.39"
Flask = "^2.3.3"
Flask-Cors = "^4.0.0"
ninja = "^1.11.1"
rwkv = "^0.8.9"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = " https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
